--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -18,7 +18,7 @@
       <div class="card-body">
         <h5 class="card-title">Audifarma</h5>
         <p class="card-text">Listado de Medicamentos Desabastecidos</p>
-        <a href="/links" class="btn btn-primary">Medicos Chapinero ,Colinas</a>
+        <a href="/links" class="btn btn-success">Chapinero ,Colinas</a>
       </div>
     </div>
   </div>
@@ -26,14 +26,28 @@
   <div class="col-sm-6">
     <div class="card text-center text-white bg-secondary mb-3">
       <div class="card-body">
-        <h5 class="card-title">Audifarma</h5>
+        <h5 class="card-title">Cafam</h5>
         <p class="card-text"> Listado de Medicamentos Desabastecidos</p>
-        <a href="/links/list_todas" class="btn btn-success">Operador Logistico</a>
+        <a href="/links/list_todas" class="btn btn-info">Ciudad Bolivar y Centenario</a>
       </div>
     </div>
   </div>
 </div>
   <hr class="my-4">
+
+<div class="row">
+  <div class="col-sm-6">
+    <div class="card text-center text-white bg-secondary mb-3">
+      <div class="card-body">
+        <h5 class="card-title">Colsubsido</h5>
+        <p class="card-text">Listado de Medicamentos Desabastecidos</p>
+        <a href="/links" class="btn btn-primary">Bosa Y Fontibon</a>
+      </div>
+    </div>
+  </div>
+  
+  <hr class="my-4">
+
  <hr class="my-4">
 
 
@@ -47,8 +61,8 @@
             <h6 class="text-muted lead">CONTACTO:</h6>
             <h6 class="text-muted">
             Ing Javier Garcia, Cristhy Coronado<br>
-            Soporte Cristian Moreno.<br>
-            Teléfonos: 3134238891 – 3102854525.<br>
+            <br>
+            Teléfonos:  3102854525.<br>
             </h6>
         </div>
         <div class="col-xs-12 col-md-6">
