--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -28,7 +28,7 @@
       <div class="card-body">
         <h5 class="card-title">Cafam</h5>
         <p class="card-text"> Listado de Medicamentos Desabastecidos</p>
-        <a href="/links/list_todas" class="btn btn-info">Ciudad Bolivar y Centenario</a>
+        <a href="/links" class="btn btn-info">Ciudad Bolivar y Centenario</a>
       </div>
     </div>
   </div>
