--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -16,35 +16,18 @@
   <div class="col-sm-6">
     <div class="card text-center text-white bg-secondary mb-3">
       <div class="card-body">
-        <h5 class="card-title">Audifarma</h5>
+        <h5 class="card-title">VER</h5>
         <p class="card-text">Listado de Medicamentos Desabastecidos</p>
-        <a href="/links" class="btn btn-success">Chapinero ,Colinas</a>
+        <a href="/links" class="btn btn-success">Bogota,Cundinamarca</a>
       </div>
     </div>
   </div>
   
-  <div class="col-sm-6">
-    <div class="card text-center text-white bg-secondary mb-3">
-      <div class="card-body">
-        <h5 class="card-title">Cafam</h5>
-        <p class="card-text"> Listado de Medicamentos Desabastecidos</p>
-        <a href="/links" class="btn btn-info">Ciudad Bolivar y Centenario</a>
-      </div>
-    </div>
-  </div>
+ 
 </div>
   <hr class="my-4">
 
-<div class="row">
-  <div class="col-sm-6">
-    <div class="card text-center text-white bg-secondary mb-3">
-      <div class="card-body">
-        <h5 class="card-title">Colsubsido</h5>
-        <p class="card-text">Listado de Medicamentos Desabastecidos</p>
-        <a href="/links" class="btn btn-primary">Bosa Y Fontibon</a>
-      </div>
-    </div>
-  </div>
+
   
   <hr class="my-4">
 
@@ -67,7 +50,7 @@
         </div>
         <div class="col-xs-12 col-md-6">
         <div class="pull-right">
-        <h6 class="text-muted lead">Bienestar IPS</h6>
+        <h6 class="text-muted lead"> Desarrollado Bienestar IPS</h6>
               <div class="redes-footer">
                   
               </div>
