--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -22,6 +22,18 @@
       </div>
     </div>
   </div>
+
+
+
+  <div class="col-sm-6">
+    <div class="card text-center text-white bg-secondary mb-3">
+      <div class="card-body">
+        <h5 class="card-title">VER</h5>
+        <p class="card-text">Listado Reformulacion</p>
+        <a href="/links/tasks" class="btn btn-danger">Bogota,Cundinamarca</a>
+      </div>
+    </div>
+  </div>
   
  
 </div>
