--- a/src/views/links/edit_task.hbs
+++ b/src/views/links/edit_task.hbs
@@ -13,12 +13,18 @@
             placeholder="Laboratorio"
            {{task.respuesta_medico}}
           >
-            <option
-              value="A. MENARINI LATIN AMERICA S.L.U  SUCURSAL COLOMBIA"
-            >Se Envia por Correo</option>
-            <option value="ABBOTT LAB.DE COLOMBIA S.A">se llama</option>
-            <option value="ABBVIE S.A.S.">Correo rebota</option>
-            <option value="ADS PHARMA SAS">No procesado</option>
+            <optionvalue="Formulación generada con contacto con usuario">Formulación generada con contacto con usuario</option>
+            <option value="Formulación generada sin contacto con usuario">Formulación generada sin contacto con usuario</option>
+            <option value="No es posible generar reformulación, medicamento sin alternativo">No es posible generar reformulación, medicamento sin alternativo</option>
+            <option value="Formulación generada por especialista, con contacto con usuario">Formulación generada por especialista, con contacto con usuario</option>
+            <option value="Formulación generada por especialista, sin contacto con usuario">Formulación generada por especialista, sin contacto con usuario</option>
+            <option value="otro">otro</option>
+
+           
+
+
+
+
 
           </select>
         </div>
