--- a/src/views/links/tasks.hbs
+++ b/src/views/links/tasks.hbs
@@ -36,6 +36,8 @@
                 <th data-field="col2">ID </th>
                 <th data-field="col3" data-sortable="true">Sede</th>
                 <th data-field="col4" data-sortable="true">Departamento</th>
+                <th data-field="col9" data-sortable="true">Remite</th> 
+
                 <th data-field="col5" data-sortable="true">Tipo ID</th>
                 <th data-field="col6" data-sortable="true" >Numero ID</th>
                 <th data-field="col7" data-sortable="true" >Nombres</th>
@@ -71,6 +73,7 @@
                 <td>{{id}}</td>
                 <td>{{title}}</td>
                 <td>{{departamento}}</td>
+                <td>{{remite}}</td>
                 <td>{{tipoid}}</td>
                 <td>{{numeroid}}</td>
                 <td>{{nombre}}</td>
