--- a/src/views/links/edit_task.hbs
+++ b/src/views/links/edit_task.hbs
@@ -13,7 +13,7 @@
             placeholder="Laboratorio"
            {{task.respuesta_medico}}
           >
-            <option value="">Selecciones</option>
+            <option value="">Seleccione</option>
             <option value="Formulación generada con contacto con usuario">Formulación generada con contacto con usuario</option>
             <option value="Formulación generada sin contacto con usuario">Formulación generada sin contacto con usuario</option>
             <option value="No es posible generar reformulación, medicamento sin alternativo">No es posible generar reformulación, medicamento sin alternativo</option>
